# trompeloeilExample

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: findDependencies.cmake
lib/: CMakeLists.txt
lib/include/lib/: Order.h  Store.h
lib/src/: Order.cpp
tests/: CMakeLists.txt  testFoo.cpp  testMain.cpp  trompeloeil_catch.h
